--- a/google_cybersecurity_certificate_crse_01_wk_01.org
+++ b/google_cybersecurity_certificate_crse_01_wk_01.org
@@ -1,5 +1,7 @@
 #+title: Google Cybersecurity Professional Certificate - Course 01 | Week 01
 #+hugo_custom_front_matter: :summary Week One of Google's Cybersecurity Certification, Foundations of Cybersecurity
+#+hugo_publishdate: 2023-05-30
+#+hugo_auto_set_lastmod: t
 #+hugo_code_fence: nil
 #+hugo_section: notes
 #+hugo_draft: false
