Finish Google CyberSec Course 02 Week 01 and rename notes

--- a/google_cybersecurity_professional_certificate_course_01_week_04.org
+++ b/google_cybersecurity_professional_certificate_course_01_week_04.org
@@ -1,3 +1,6 @@
+:PROPERTIES:
+:ID:       f26c113e-d2e2-4c14-bfb4-09b49fd23020
+:END:
 #+title: Google Cybersecurity Professional Certificate - Course 01 | Week 04
 #+hugo_custom_front_matter: :summary Week Four of Google's Cybersecurity Certification, Foundations of Cybersecurity
 #+hugo_publishdate: 2023-06-28
